--- a/blog/templates/blog/ArmySensor.html
+++ b/blog/templates/blog/ArmySensor.html
@@ -4,380 +4,215 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<title> ---통합관제시스템--- </title>
-	<link rel="stylesheet" href="{% static 'css\style.css'%}">
-	<link rel="stylesheet" href="{% static 'css/BlockStyle.css'%}">
-	<link rel="stylesheet" href="{% static 'css/NodeStyle.css'%}">
-	<link rel="stylesheet" href="{% static 'css/TotalStyle.css'%}">
-	<link rel="stylesheet" href="{%static 'css/ButtonStyle.css'%}">
-	<script type="text/javascript" src="{% static 'js/main.js'%}"> </script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="">
+
+    <title>------통합관제시스템------</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/dashboard.css'%}" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="{% static 'js/ie-emulation-modes-warning.js.다운로드'%}"></script>
+    <link rel="stylesheet" href="{%static 'css/all.min.css'%}">
+    <script src="{%static 'js/all.min.js'%}"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 	<style>
 
 		a:hover{
 			color: black;
-
+      text-decoration : none;
 		}
 
 	</style>
 
 
 
-	<script>window.setTimeout(function(){location.href = "http://192.168.1.101:8080/restart"},2000);</script>
+<script>window.setTimeout(function(){location.href = "http://192.168.1.101:8080/restart"},1500);</script>
 	
 
 	{% if real == 1 %}
 	<script> window.open(href = "popup", '_blank', 'width=1000, height=450,toolbars = no, scrollbars = yes'); </script>
+	<script> window.open(href = "center_2",  'width=auto, height=auto,toolbars = no, scrollbars = yes'); </script>
+  
+
 	{% endif %}
 
 
 
 </head>
 
-<body onload = "">
+  <body>
 
-	<div id = "header">
-		통합관제시스템
-	</div>
-	<div id = "sidebar">
-		<button class="placesBtn"> <a href="restart" onclick="window.open(this.href,'_self', 'width=1000, height=450,toolbars = no, scrollbars = yes'); return false;" id="side">종합화면</a> </button>
-		<button class="placesBtn"> <a href="center" onclick="window.open(this.href,'_self', 'width=1000, height=450,toolbars = no, scrollbars = yes'); return false;" id="side">통신센터</a> </button>
-		<button class="placesBtn"> <a href="restart" onclick="window.open(this.href,'_self', 'width=1000, height=450,toolbars = no, scrollbars = yes'); return false;" id="side">66쉘터차량</a> </button>
-		<button class="placesBtn"> 군사경찰대 </button>
-		<button class="placesBtn"> 방공대대 </button>
-		<button class="placesBtn"> 정보대대 </button>
-		<button class="placesBtn"> 의무근무대 </button>
-		<button class="placesBtn"> 기갑여단 </button>
-		<button class="placesBtn"> 포병여단 </button>
-	</div>
-	<div id = "content">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="">8사단 통합관제시스템</a>
+        </div>
+                <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="">Dashboard</a></li>
+            <li><a href="timeset" onclick="window.open(this.href,'_blank', 'width=500, height=250,toolbars = no, scrollbars = yes'); return false;">시간 설정</a></li>
+            <li><a href="">노드 추가</a></li>
+            <li><a href="">기타</a></li>
+          </ul>
+          </div>
 
-		<div class = "StateBlock" id = "NormalBlock">
-		<img class="BlockImg" src="{% static 'Img/Smile.png'%}">
-			<span class = "BlockName">
-				정상
-			</span>
-			<span class = "StateNum"><a href="green" onclick="window.open(this.href,'_blank', 'width=1000, height=450,toolbars = no, scrollbars = yes'); return false;">{{all.green}}</a></span>
-		</div>
+        </div>
+      </div>
+    </nav>
 
-		<div class = "StateBlock" id = "MidNormalBlock">
-		<img class="BlockImg" src="{% static 'Img/Warnning.png'%}">
-			<span class = "BlockName">
-				주의
-			</span>
-			<span class = "StateNum"><a href="yellow" onclick="window.open(this.href,'_blank', 'width=1000, height=450,toolbars = no, scrollbars = yes'); return false;">{{all.yellow}}</a></span>		</div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+            <li class="active"><a>전체보기 <span class="sr-only"></a> </li>
+            <li><a href="center_2">정보통신센터</a></li>
+            <li><a href="mountain">불국산</a></li>
+            <li><a href="center_3">ATCIS 쉘터</a></li>
+            <li><a href="center_4">TICN 쉘터</a></li>
+            <li><a href="">HCTR 쉘터</a></li>
+            <li><a href="">MSAP 쉘터</a></li>
+            <li><a href="">위성 쉘터</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">3</a></li>
+            <li><a href="">4</a></li>
+            <li><a href="">5</a></li>
+            <li><a href="">6</a></li>
+            <li><a href="">7</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">8</a></li>
+            <li><a href="">9</a></li>
+            <li><a href="">10</a></li>
+          </ul>
+        </div>
 
-		<div class = "StateBlock" id = "UnNormalBlock">
-		<img class="BlockImg" src="{% static 'Img/error.png'%}">
-			<span class = "BlockName">
-				비정상
-			</span>
-			<span class = "StateNum"><a href="red" onclick="window.open(this.href,'_blank', 'width=1000, height=450,toolbars = no, scrollbars = yes'); return false;">{{all.red}}</a></span>		</div>
 
-		<button id="NodeMake" class = "NodeTaskButton">
-			노드 생성</button>
-		<button id="NodeAttribute" class = "NodeTaskButton">
-			노드 속성</button>
-		<button id="NodeAttribute" class = "NodeTaskButton">
-			<a href="timeset" onclick="window.open(this.href,'_blank', 'width=500, height=250,toolbars = no, scrollbars = yes'); return false;" style="color: black; text-decoration-line: none;">시간 설정</a></button>
+        <div class="col-sm-3 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          <h1 class="page-header">전체보기 </h1>
+          
+          <div class="col-sm-6 col-lg-4 mb-4" >
+          <button onclick="window.open('green','_blank', 'width=auto, height=auto,toolbars = no, scrollbars = yes, location=no, status=no'); return false;" style=" background-color : white; border:0px">
+            <div class="btn btn-success text-white text-center p-3" style="padding: 3px 100px;">
+              
+              <blockquote class="blockquote">
+                <h1>정상 <a href ="green" style="color:white">{{all.green}}</a></h1>
+              </blockquote>
+            </div>
+            </button>
+          </div>
 
+          <div class="col-sm-6 col-lg-4 mb-4" style="">
+          <button onclick="window.open('yellow','_blank', 'width=auto, height=auto,toolbars = no, scrollbars = yes,location=no, status=no'); return false;" style=" background-color : white; border:0px">
+            <div class="btn btn-warning text-white text-center p-3" style="padding: 3px 100px;">
 
-		<div id = "NodeContents">
-			<ul>
-			<li class = "Nodes" id = "Node1">
-				<div class = "NodeNames"> 정보통신센터1 </div>
-				<div class = "NodeDatas">
-					<ul>
-						<li class = "Sensors" id="TempS" > 
-							<div class = "SensorNames" >
-								온도
-							</div>
-							<div class = "SensorValues" style="{{all.ondo_color}}">
-								{{all.ondo}}ºC
-							</div>
-						</li>
-						<li class = "Sensors" id="DoorS" > 
-							<div class = "SensorNames">
-								문열림
-							</div>
-							<div class = "SensorValues" style="{{all.Door_color}}">
-								{{all.Door}}
-							</div>
-						</li>
-						<li class = "Sensors" id="PassS" >
-							<div class = "SensorNames">
-								암호모듈
-							</div>
-							<div class = "SensorValues" style="{{all.password_color}}">
-								{{all.password}}
-							</div>
-						</li>
-						<li class = "Sensors" id="FireS" >
-							<div class = "SensorNames">
-								화재
-							</div>
-							<div class = "SensorValues" style="{{all.Fire_color}}">
-								{{all.Fire}}
-							</div>
-						</li>
-						<li class = "Sensors" id="StrangeS">
-							<div class = "SensorNames">
-								거수자
-							</div>
-							<div class = "SensorValues"  style="{{all.invade_color}}">
-								{{all.invade}}
-							</div>
-						</li>
-					</ul>
-				</div>
-			</li>
-			<li class = "Nodes" id = "Node1">
-				<div class = "NodeNames"> 정보통신센터2 </div>
-				<div class = "NodeDatas">
-					<ul>
-						<li class = "Sensors" id="TempS" > 
-							<div class = "SensorNames" >
-								온도
-							</div>
-							<div class = "SensorValues" style="{{all67.ondo_color67}}">
-								{{all67.ondo67}}ºC
-							</div>
-						</li>
-						<li class = "Sensors" id="DoorS" > 
-							<div class = "SensorNames">
-								문열림
-							</div>
-							<div class = "SensorValues" style="{{all67.Door_color67}}">
-								{{all67.Door67}}
-							</div>
-						</li>
-						<li class = "Sensors" id="PassS" >
-							<div class = "SensorNames">
-								암호모듈
-							</div>
-							<div class = "SensorValues" style="{{all67.password_color67}}">
-								{{all67.password67}}
-							</div>
-						</li>
-						<li class = "Sensors" id="FireS" >
-							<div class = "SensorNames">
-								화재
-							</div>
-							<div class = "SensorValues" style="{{all67.Fire_color67}}">
-								{{all67.Fire67}}
-							</div>
-						</li>
-						<li class = "Sensors" id="StrangeS">
-							<div class = "SensorNames">
-								거수자
-							</div>
-							<div class = "SensorValues"  style="{{all67.invade_color67}}">
-								{{all67.invade67}}
-							</div>
-						</li>
-					</ul>
-				</div>
-			</li>
-			<!-- <li class = "Nodes" id = "Node3">
-				<div class = "NodeNames"> 체계운용과 </div>
-				<div class = "NodeDatas">
-					<ul>
-						<ul>
-						<li class = "Sensors" id="TempS"> 
-							<div class = "SensorNames">
-								온도
-							</div>
-							<div class = "SensorValues">
-								21도
-							</div>
-						</li>
-						<li class = "Sensors" id="DoorS"> 
-							<div class = "SensorNames">
-								문열림
-							</div>
-							<div class = "SensorValues">
-								닫힘
-							</div>
-						</li>
-						<li class = "Sensors" id="PassS">
-							<div class = "SensorNames">
-								암호모듈
-							</div>
-							<div class = "SensorValues">
-								정상
-							</div>
-						</li>
-						<li class = "Sensors" id="FireS">
-							<div class = "SensorNames">
-								화재
-							</div>
-							<div class = "SensorValues">
-								정상
-							</div>
-						</li>
-						<li class = "Sensors" id="StrangeS">
-							<div class = "SensorNames">
-								거수자
-							</div>
-							<div class = "SensorValues">
-								없음
-							</div>
-						</li>
-					</ul>
-					</ul>
-				</div>
-			</li>
-			<li class = "Nodes" id = "Node4">
-				<div class = "NodeNames"> 군수과 </div>
-				<div class = "NodeDatas">
-					<ul>
-						<ul>
-						<li class = "Sensors" id="TempS"> 
-							<div class = "SensorNames">
-								온도
-							</div>
-							<div class = "SensorValues">
-								21도
-							</div>
-						</li>
-						<li class = "Sensors" id="DoorS"> 
-							<div class = "SensorNames">
-								문열림
-							</div>
-							<div class = "SensorValues">
-								닫힘
-							</div>
-						</li>
-						<li class = "Sensors" id="PassS">
-							<div class = "SensorNames">
-								암호모듈
-							</div>
-							<div class = "SensorValues">
-								정상
-							</div>
-						</li>
-						<li class = "Sensors" id="FireS">
-							<div class = "SensorNames">
-								화재
-							</div>
-							<div class = "SensorValues">
-								정상
-							</div>
-						</li>
-						<li class = "Sensors" id="StrangeS">
-							<div class = "SensorNames">
-								거수자
-							</div>
-							<div class = "SensorValues">
-								없음
-							</div>
-						</li>
-					</ul>
-					</ul>
-				</div>
-			</li>
-			<li class = "Nodes" id = "Node5">
-				<div class = "NodeNames"> 인사과 </div>
-				<div class = "NodeDatas">
-					<ul>
-						<ul>
-						<li class = "Sensors" id="TempS"> 
-							<div class = "SensorNames">
-								온도
-							</div>
-							<div class = "SensorValues">
-								21도
-							</div>
-						</li>
-						<li class = "Sensors" id="DoorS"> 
-							<div class = "SensorNames">
-								문열림
-							</div>
-							<div class = "SensorValues">
-								닫힘
-							</div>
-						</li>
-						<li class = "Sensors" id="PassS">
-							<div class = "SensorNames">
-								암호모듈
-							</div>
-							<div class = "SensorValues">
-								정상
-							</div>
-						</li>
-						<li class = "Sensors" id="FireS">
-							<div class = "SensorNames">
-								화재
-							</div>
-							<div class = "SensorValues">
-								정상
-							</div>
-						</li>
-						<li class = "Sensors" id="StrangeS">
-							<div class = "SensorNames">
-								거수자
-							</div>
-							<div class = "SensorValues">
-								없음
-							</div>
-						</li>
-					</ul>
-					</ul>
-				</div>
-			</li>
-			<li class = "Nodes" id = "Node6">
-				<div class = "NodeNames"> 정보통신센터 </div>
-				<div class = "NodeDatas">
-					<ul>
-						<ul>
-						<li class = "Sensors" id="TempS"> 
-							<div class = "SensorNames">
-								온도
-							</div>
-							<div class = "SensorValues">
-								21도
-							</div>
-						</li>
-						<li class = "Sensors" id="DoorS"> 
-							<div class = "SensorNames">
-								문열림
-							</div>
-							<div class = "SensorValues">
-								닫힘
-							</div>
-						</li>
-						<li class = "Sensors" id="PassS">
-							<div class = "SensorNames">
-								암호모듈
-							</div>
-							<div class = "SensorValues">
-								정상
-							</div>
-						</li>
-						<li class = "Sensors" id="FireS">
-							<div class = "SensorNames">
-								화재
-							</div>
-							<div class = "SensorValues">
-								정상
-							</div>
-						</li>
-						<li class = "Sensors" id="StrangeS">
-							<div class = "SensorNames">
-								거수자
-							</div>
-							<div class = "SensorValues">
-								없음
-							</div>
-						</li>
-					</ul>
-					</ul>
-				</div>
-			</li>-->
-			</ul>
-		</div>
+              <blockquote class="blockquote">
+                <h1>주의 <a href= "yellow" style="color:white">{{all.yellow}}</a></h1>
+              </blockquote>
+            </div>
+            </button>
+          </div>
 
-	</div> 
+          <div class="col-sm-6 col-lg-4 mb-4" style="">
+                <button onclick="window.open('red','_blank', 'width=auto, height=auto,toolbars = no, scrollbars = yes,location=no, status=no'); return false;" style=" background-color : white; border:0px">
+            <div class="btn btn-danger text-white text-center p-3" style="padding: 3px 100px;">
+              
+              <blockquote class="blockquote">
+                <h1>위험 <a href="red" style ="color:white">{{all.red}}</a></h1>
+              </blockquote>
+            </div>
+            </button>
+          </div>
+          
+
+          <div class="col-sm-9 col-sm-offset-3 col-md-12 col-md-offset-0 main">
+            <h3 class="page-header"> 상세 보기 </h3>
+            <div class="row placeholders">
+              <div class="col-xs-6 col-sm-2 placeholder">
+                <a href = "center_2" style="color:black">
+                <i class="{{all.xxxx}}" style = "color : #5cb85c;"></i>
+                <h4>정보통신센터</h4>
+                <span class="text-muted"> 정보통신대대 1층 </span>
+                </a>
+              </div>
+              <div class="col-xs-6 col-sm-2 placeholder">
+                <a href = "mountain" style="color:black">
+                <i class="fa fa-smile fa-7x" style = "color : #5cb85c;"></i>
+                <h4>불국산</h4>
+                <span class="text-muted"> 8사단 </span>
+                </a>
+              </div>
+              <div class="col-xs-6 col-sm-2 placeholder">
+                <a href = "center_3" style="color:black">
+                <i class="fa fa-smile fa-7x" style = "color : #5cb85c;"></i>
+                <h4>ATCIS 쉘터</h4>
+                <span class="text-muted"> 정보통신대대 차양대 </span>
+                </a>
+              </div>
+              
+              <div class="col-xs-6 col-sm-2 placeholder">
+                <a href = "center_4" style="color:black">
+                <i class="fa fa-smile fa-7x" style = "color : #5cb85c;"></i>
+                <h4>TICN쉘터</h4>
+                <span class="text-muted"> 정보통신대대 차양대 </span>
+                </a>
+              </div>
+
+              <div class="col-xs-6 col-sm-2 placeholder">
+                <i class="fa fa-smile fa-7x" style = "color : #5cb85c;"></i>
+                <h4>HCTR 쉘터</h4>
+                <span class="text-muted"> 정보통신대대 차양대 </span>
+              </div>
+
+              <div class="col-xs-6 col-sm-2 placeholder">
+                <i class="fa fa-alert fa-7x" style = "color : #f0ad4e;"></i>
+                <h4>위성 쉘터</h4>
+                <span class="text-muted"> 정보통신대대 차양대 </span>
+              </div>
+
+              <div class="col-xs-6 col-sm-2 placeholder">
+                <i class="fa fa-door fa-7x" style = "color : #d9534f;"></i>
+                <h4>MSAP 쉘터</h4>
+                <span class="text-muted"> 정보통신대대 차양대 </span>
+              </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="./Dashboard Template for Bootstrap_files/jquery.min.js.다운로드"></script>
+    <script src="./Dashboard Template for Bootstrap_files/bootstrap.min.js.다운로드"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="./Dashboard Template for Bootstrap_files/holder.js.다운로드"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="./Dashboard Template for Bootstrap_files/ie10-viewport-bug-workaround.js.다운로드"></script>
+  
+
 </body>
 </html>
