--- a/blog/templates/blog/red.html
+++ b/blog/templates/blog/red.html
@@ -1,42 +1,64 @@
 {%load static%}
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<!-- saved from url=(0041) -->
+<html lang="en">
+  <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="">
 
-<html>
+    <title>------통합관제시스템------</title>
 
-<head>
-	<meta charset="UTF-8">
-	<title> ---통합관제시스템--- </title>
-	<link rel="stylesheet" href="{% static 'css\red_style.css'%}">
+    <!-- Bootstrap core CSS -->
+    <link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/dashboard.css'%}" rel="stylesheet">
 
-
-</head>
-
-<body onload = "">
-
-
-
-	<div id="sidebar">
-		<div id="NormalBtn" class = "SideBtn">
-			<img class="BlockImg" src="{% static 'Img/Smile.png'%}">
-		</div>
-		<div id="WarningBtn" class = "SideBtn">
-			<img class="BlockImg" src="{% static 'Img/Warnning.png'%}">
-		</div>
-		<div id="DangerousBtn" class = "SideBtn">
-			<img class="BlockImg" src="{% static 'Img/error.png'%}">
-		</div>
-	</div>
-	<div id = "content">
-		{%for item in red%}
-		<div id="lst">{{item}}</div>
-		{% endfor %}
-	</div>
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="{% static 'js/ie-emulation-modes-warning.js.다운로드'%}"></script>
+    <link rel="stylesheet" href="{%static 'css/all.min.css'%}">
+    <script src="{%static 'js/all.min.js'%}"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 
+  </head>
 
-
-
+  <body style="width:100%; height:100%; margin:0x; padding:0px">
+    <div>
+      <div class="modal-dialog" role="document"  style=" width:100%; height:100%">
+        <div class="modal-content">
+          <div class="modal-header btn-danger">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" onClick="window.close()"><span aria-hidden="true">&times;</span></button>
+            <h3 class="modal-title" id="myModalLabel">위험 상황 발생</h3>
+          </div>
+          <div class="modal-body">
+		  {%for item in red%}
+            <h2> {{item}} </h2>
+			{%endfor%}
+          </div>
+        </div>
+      </div>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="./Dashboard Template for Bootstrap_files/jquery.min.js.다운로드"></script>
+    <script src="./Dashboard Template for Bootstrap_files/bootstrap.min.js.다운로드"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="./Dashboard Template for Bootstrap_files/holder.js.다운로드"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="./Dashboard Template for Bootstrap_files/ie10-viewport-bug-workaround.js.다운로드"></script>
+  
 
 </body>
 </html>
